bug-fixed: shadow is visible while decrease widget size

--- a/src/iframe-style.css
+++ b/src/iframe-style.css
@@ -34,23 +34,6 @@
     
 }
 
-#tiledeskdiv.decreaseSize {
-    /* transition: width 1s, height 1s; */
-    transition: all 1s ease-out !important;
-    width: var(--iframeMinWidth);
-    height: var(--iframeMinHeight);
-    /* animation: right-animate 1s ease infinite alternate; */
-
-}
-
-#tiledeskdiv.increaseSize {
-    /* transition: width 1s, height 1s; */
-    transition: all 1s ease-in !important;
-    width: var(--iframeMaxWidth);
-    height: var(--iframeMaxHeight);
-    /* animation: right-animate 1s ease infinite alternate; */
-
-}
 
 #tiledeskdiv.fullscreen {
     /* transition: width 1s, height 1s; */
@@ -110,30 +93,29 @@
 #tiledesk-container.open #tiledeskiframe {
     display: block;
     /*width: 376px;*/
-    /* -webkit-animation: fade-in-shadow 0.4s ease-in 0.0s both;
-    animation: fade-in-shadow 0.4s ease-in 0.0s both; */
-    /* border-radius: 16px; */
-    /* box-shadow: rgba(0, 18, 46, 0.16) 0px 8px 36px 0px; */
-    /* margin: 10px; */
 }
 #tiledesk-container.open #tiledeskdiv.shadow {
     transition: box-shadow 0.8s ease-in;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 8px 36px 0px; /*NEW GAB*/
 }
-/* @-webkit-keyframes fade-in-shadow {
-    0% { box-shadow: rgba(0, 0, 0, 0.0) 0 0 0px; }
-    100% { box-shadow: rgba(0, 0, 0, 0.1) 0 0 6px; }
-}
-@keyframes sk-bouncedelay {
-    0% { box-shadow: rgba(0, 0, 0, 0.0) 0 0 0px; }
-    100% { box-shadow: rgba(0, 0, 0, 0.1) 0 0 6px; }
-} */
+
 
 #tiledesk-container.closed #tiledeskiframe {
     display: block;
     box-shadow: none;
 }
 
+#tiledesk-container.open #tiledeskdiv.decreaseSize {
+    width: var(--iframeMinWidth);
+    height: var(--iframeMinHeight);
+}
+
+#tiledesk-container.open #tiledeskdiv.increaseSize {
+    /* transition: width 1s, height 1s; */
+    transition: all 0.5s ease-in;
+    width: var(--iframeMaxWidth);
+    height: var(--iframeMaxHeight);
+}
 
 #tiledeskiframe .full-screen-mode {
     width: 100%;
